tests: update surefire configuration