@@ -425,7 +425,7 @@
         <artifactId>maven-surefire-plugin</artifactId>
         <version>${maven-surefire-plugin.version}</version>
         <configuration>
-          <argLine>-Xmx1024m -XX:MaxPermSize=512m</argLine>
+          <forkCount>1</forkCount>
         </configuration>
       </plugin>
 
